--- a/AppGallery/AppGallery/AppBase/Menu.xaml
+++ b/AppGallery/AppGallery/AppBase/Menu.xaml
@@ -5,22 +5,27 @@
              x:Class="AppGallery.AppBase.Menu">
     <MasterDetailPage.Master>
         <ContentPage Title="Menu">
-            <StackLayout>
-                <Label Text="Páginas" />
-                <Button Text="ContentPage" Clicked="AbrirContentPage" />
-                <Button Text="NavigationPage" Clicked="AbrirNavigationPage" />
-                <Button Text="CarouselPage" Clicked="AbrirCarouselPage" />
-                <Button Text="TabbedPage" Clicked="AbrirTabbedPage" />
-                <Button Text="MasterDetailPage" Clicked="AbrirMasterDetailPage" />
-                <Button Text="Modal" Clicked="AbrirPaginaModal" />
+            <ScrollView>
+                <StackLayout>
+                    <Label Text="Páginas" />
+                    <Button Text="ContentPage" Clicked="AbrirContentPage" />
+                    <Button Text="NavigationPage" Clicked="AbrirNavigationPage" />
+                    <Button Text="CarouselPage" Clicked="AbrirCarouselPage" />
+                    <Button Text="TabbedPage" Clicked="AbrirTabbedPage" />
+                    <Button Text="MasterDetailPage" Clicked="AbrirMasterDetailPage" />
+                    <Button Text="Modal" Clicked="AbrirPaginaModal" />
 
-                <Label Text="Layouts" />
-                <Button Text="StackLayout" Clicked="AbrirStackLayout" />
-                <Button Text="GridLayout" Clicked="AbrirGridLayout" />
-                <Button Text="AbsolutLayout" Clicked="AbrirAbsolutLayout" />
-                <Button Text="RelativeLayout" Clicked="AbrirRelativeLayout" />
-                <Button Text="FlexLayout" Clicked="AbrirFlexLayout" />
-            </StackLayout>
+                    <Label Text="Layouts" />
+                    <Button Text="StackLayout" Clicked="AbrirStackLayout" />
+                    <Button Text="GridLayout" Clicked="AbrirGridLayout" />
+                    <Button Text="AbsolutLayout" Clicked="AbrirAbsolutLayout" />
+                    <Button Text="RelativeLayout" Clicked="AbrirRelativeLayout" />
+                    <Button Text="FlexLayout" Clicked="AbrirFlexLayout" />
+                    <Button Text="ScrollView" Clicked="AbrirScrollView" />
+                    <Button Text="ContentView" Clicked="AbrirContentView" />
+                    <Button Text="Frame" Clicked="AbrirFrame" />
+                </StackLayout>
+            </ScrollView>
         </ContentPage>
     </MasterDetailPage.Master>
 
