--- a/AppGallery/AppGallery/XamarinForms/Layouts/LayoutQuadrado/Quadrado.xaml
+++ b/AppGallery/AppGallery/XamarinForms/Layouts/LayoutQuadrado/Quadrado.xaml
@@ -3,10 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppGallery.XamarinForms.Layouts.LayoutQuadrado.Quadrado">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+        <StackLayout Padding="20" Spacing="40">
+            <Frame HorizontalOptions="Center" CornerRadius="100" Padding="0" BorderColor="Black">
+                <BoxView Color="Green" WidthRequest="150" HeightRequest="150"/>
+            </Frame>
+            <Frame Padding="0">
+                <StackLayout>
+                    <Label Text="Steven Spielberg" HorizontalOptions="Center" Margin="20, 20, 20, 10" TextColor="Black" FontSize="24"/>
+                    <BoxView HeightRequest="1" Color="LightGray" HorizontalOptions="FillAndExpand"/>
+                    <Label Text="Mussum Ipsum, cacilds vidis litro abertis. Copo furadis é disculpa de bebadis, arcu quam euismod magna. " Margin="20" />
+                </StackLayout>
+            </Frame>
+            <Frame HasShadow="True" CornerRadius="1000" BorderColor="Green" >
+                <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            </Frame>            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
