--- a/AppGallery/AppGallery/XamarinForms/Controles/CaixaControle/Caixa.xaml
+++ b/AppGallery/AppGallery/XamarinForms/Controles/CaixaControle/Caixa.xaml
@@ -3,10 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppGallery.XamarinForms.Controles.CaixaControle.Caixa">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout Spacing="10">
+            <!--Quadrado-->
+            <BoxView Color="Black" HorizontalOptions="Center" WidthRequest="100" HeightRequest="100" />
+            <!--Retangulo-->
+            <BoxView Color="Black" HorizontalOptions="Center" WidthRequest="30" HeightRequest="100" />
+            <!--Linha-->
+            <BoxView Color="Black" HorizontalOptions="Center" WidthRequest="1" HeightRequest="100" />
+            <!--Quadrado com cantos arredondados-->
+            <BoxView Color="Black" HorizontalOptions="Center" WidthRequest="100" HeightRequest="100" CornerRadius="5" />
+            <!--Círculo-->
+            <BoxView Color="Black" HorizontalOptions="Center" WidthRequest="100" HeightRequest="100" CornerRadius="50" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
